<resources>
    <string name="app_name">Happily Ever After</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="profile">Profile</string>
    <string name="quick">Quick</string>
    <string name="basic">Basic</string>
    <string name="deep">Deep</string>
    <string name="matches">Matches</string>
    <string name="events">Events</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="age">Age</string>
    <string name="match_s_age">Match\'s Age Preference</string>
    <string name="location">Location</string>
    <string name="match_s_loc">Match\'s Preferred Location</string>
    <string name="religion">Religion</string>
    <string name="match_s_religion">Match\'s Preferred Religion</string>
    <string name="same_as_mine">Same as mine</string>
    <string name="no_preference">No Preference</string>
    <string name="same_city">Same City</string>
    <string name="same_country">Same Country</string>
    <string name="height">Height (in cm)</string>
    <string name="match_s_height">Match\'s Preferred Height</string>
    <string name="match_s_preferred_educational_qualification">Match\'s Preferred Educational Qualification</string>
    <string name="widowed">Widowed</string>
    <string name="divorced">Divorced</string>
    <string name="separated">Separated</string>
    <string name="single">Single</string>
    <string name="match_s_preferred_marital_status">Match\'s Preferred Marital Status</string>
    <string name="marital_status">Marital Status</string>
    <string name="phd">PhD</string>
    <string name="masters">Masters</string>
    <string name="bachelors">Bachelors</string>
    <string name="less_than_bachelors">Less than Bachelors</string>
    <string name="education">Education</string>
    <string name="max_height">Max Height</string>
    <string name="min_height">Min Height</string>
    <string name="max_age">Max Age</string>
    <string name="min_age">Min Age</string>
    <string name="family">Family</string>
    <string name="parents">Parents</string>
    <string name="both_parents_are_alive">Both Parents are alive</string>
    <string name="only_father_is_alive">Only Father is alive</string>
    <string name="only_mother_is_alive">Only Mother is alive</string>
    <string name="both_parents_are_no_more">Both parents are no more</string>
    <string name="match_s_parents">Match\'s Parents</string>
    <string name="siblings">Number of Siblings</string>
    <string name="brothers">Brothers</string>
    <string name="sisters">Sisters</string>
    <string name="submit">Submit</string>
    <string name="hello">Hello</string>
</resources>