<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="top"
        android:orientation="vertical"
        android:weightSum="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:background="#EB000000"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_back"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:iconTint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="25dp"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/name"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="#000000"
                android:textColorHint="#C1000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="20dp"
                android:textColor="#000000"
                android:textColorHint="#C1000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColor="#000000"
                android:textColorHint="#C1000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="#000000"
                android:textColorHint="#C1000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_submit_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="24sp"
                app:backgroundTint="#FFFFFF"
                app:strokeColor="#000000"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>