<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="top"
        android:orientation="vertical"
        android:weightSum="1.0">

        <!--        Header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:background="#EB000000"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_logout"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:iconTint="#000000" />

        </LinearLayout>

        <!--        Main Body-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.98"
            android:background="#FFFFFF"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:background="#FFFFFF"-->
            <!--                android:gravity="center_horizontal"-->
            <!--                android:orientation="horizontal">-->

            <!--                <Button-->
            <!--                    android:id="@+id/btn_profile_quick"-->
            <!--                    style="?android:attr/buttonBarButtonStyle"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="@string/quick"-->
            <!--                    android:textAllCaps="false"-->
            <!--                    android:textColor="#000000"-->
            <!--                    android:textSize="18sp"-->
            <!--                    app:iconTint="#000000"-->
            <!--                    app:strokeWidth="1dp"-->
            <!--                    android:layout_marginEnd="10dp"/>-->

            <!--                <Button-->
            <!--                    android:id="@+id/btn_profile_basic"-->
            <!--                    style="?android:attr/buttonBarButtonStyle"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="@string/basic"-->
            <!--                    android:textAllCaps="false"-->
            <!--                    android:textColor="#000000"-->
            <!--                    android:textSize="18sp"-->
            <!--                    app:iconTint="#000000"-->
            <!--                    app:strokeWidth="1dp"-->
            <!--                    android:layout_marginEnd="10dp"/>-->

            <!--                <Button-->
            <!--                    android:id="@+id/btn_profile_deep"-->
            <!--                    style="?android:attr/buttonBarButtonStyle"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:background="#000000"-->
            <!--                    android:enabled="false"-->
            <!--                    android:text="@string/deep"-->
            <!--                    android:textAllCaps="false"-->
            <!--                    android:textColor="#000000"-->
            <!--                    android:textSize="18sp"-->
            <!--                    app:iconTint="#000000"-->
            <!--                    app:strokeWidth="1dp" />-->

            <!--            </LinearLayout>-->
            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/profile_quick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quick" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/profile_basic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basic" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/profile_deep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deep" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <!--        Footer-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:background="#EB000000"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1.0">

            <Button
                android:id="@+id/btn_profile"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/profile"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:iconTint="#000000" />

            <Button
                android:id="@+id/btn_match"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/matches"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_event"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/events"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_support"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/support"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>